--- a/index.html
+++ b/index.html
@@ -10,19 +10,123 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
-<body>
-	<div id="top">
+<body class="container-fluid" >
+	<!-- Nav -->
+	<div class="nav-bar" id="whole">
 		<nav>
 			<h2 class="logo">Portfolio</h2>
 			<ul>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">About Me</a></li>
-				<li><a href="#">Services</a></li>
 				<li><a href="#">Projects</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
+
+		<div class="content">
+			<h4>Hello, my name is</h4>
+			<h1>John Paul <span>Veyra</span></h1>
+			<h3>I'm a Front-end Web Developer.</h3>
+			<div class="newslatter">
+				<form>
+					<input type="email" name="email" id="mail" placeholder="Enter Your Email">
+					<input type="submit" name="submit" value="Let's Start">
+				</form>
+			</div>
+		</div>
 	</div>
+	<!-- Nav -->
+
+
+	<!-- About Me -->
+	<section class="about">
+		<div class="main">
+			<img src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t1.15752-9/333232933_1839223853123996_5026653040356577729_n.png?_nc_cat=107&ccb=1-7&_nc_sid=ae9488&_nc_eui2=AeGtdOchgwtMccEGsIgeR76cmgRmCnG00fWaBGYKcbTR9aUJReY8jI15KGZvyu-Z6hcjCNVUpOLUKhP7vF4Jubpz&_nc_ohc=5P_V4i_ytJEAX8ueOz2&_nc_ht=scontent.fmnl13-2.fna&oh=03_AdSGTg14fki2ERBVR_5uWPe7NyBGN1swjVvJYbrOiIBdbQ&oe=642362DA">
+			<div class="about-text">
+				<h2>About <span>Me</span></h2>
+				<h5>Developer & <span>Designer</span></h5>
+				<p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the website more interactive with web animations.</p>
+			</div>
+						
+		</div>
+		
+	</section>
+
+	<!-- End of About Me -->
+
+	<!-- Project Section -->
+	<section class="project">
+		<div class="col">
+			<h1 class="project_1">Projects</h1>
+			<button id="button2" type="button" onclick="location.href='https://gitlab.com/dashboard/projects'">Explore</button>
+		</div>
+		<div class="col">
+			<div class="card">
+				<h5>Project 1</h5>
+			</div>
+			<div class="card2">
+				<h5>Project 2</h5>
+			</div>
+		</div>
+	</section>
+
+	<!-- End of Project Section -->
+
+	<!-- Contact me Section-->
+	<section class="contact-me">
+		<div class="p-3">
+			<div class="text-white mx-auto col-6 pb-3">
+				<h2 class="text-light p-3">Contact <span>Me</span></h2>
+				<form>
+				  <div class="form-group">
+				    <label for="exampleFormControlInput1">Name</label>
+				    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Your Name">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleFormControlInput1">Email address</label>
+				    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleFormControlInput1">Contact</label>
+				    <input type="" class="form-control" id="contact_number" placeholder="Number">
+				  </div>
+				  <div class="form-group">
+				    <label for="exampleFormControlTextarea1">Message</label>
+				    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="Message Here"></textarea>
+				  </div>
+				<button type="button" class="btn" id="email_button">Send Email</button>
+				<div class="modal" tabindex="-1">
+				  <div class="modal-dialog">
+				    <div class="modal-content">
+				      <div class="modal-header">
+				        <h5 class="modal-title">Thank you for contacting us!</h5>
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				          <span aria-hidden="true">&times;</span>
+				        </button>
+				      </div>
+				      <div class="modal-body">
+				        <p>Message Successfully Sent</p>
+				      </div>
+				      <div class="modal-footer">
+				        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				      </div>
+				    </div>
+				  </div>
+				</div>
+				</form>
+
+			</div>
+			
+	</section>
+
+	<!-- End of Contact Me Section -->
+	
+
+
+	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
 </body>
 </html>
